--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,18 @@ version: '3'
 services:
   web:
     build: .
-    command: bash -c "pip install --upgrade -r requirements.txt && python3 manage.py makemigrations tcf_website && python3 manage.py migrate && python3 manage.py collectstatic --noinput && python3 manage.py invalidate_cachalot tcf_website && echo Starting Django Server... && python3 manage.py runserver 0.0.0.0:8000"
+    command: bash -c "
+      npm install --no-fund --no-audit &&
+      pip install --upgrade -r requirements.txt &&
+      python3 manage.py makemigrations tcf_website &&
+      python3 manage.py migrate &&
+      python3 manage.py collectstatic --noinput &&
+      python3 manage.py invalidate_cachalot tcf_website &&
+      echo Starting Django Server... &&
+      python3 manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
-      - /app/db/  # exclude the subfolder to prevent potential intereference
+      - /app/db/  # exclude the subfolder to prevent potential interference
     ports:
       - '8000:8000'
     container_name: tcf_django
@@ -18,8 +26,11 @@ services:
       - ./db:/app
     image: postgres:12.2
     restart: always
-    container_name: tcf_db
+    container_name: ${DB_HOST}
+    env_file:
+      - ./.env
+    command: -p ${DB_PORT}
     environment:
-      POSTGRES_USER: tcf_django
-      POSTGRES_PASSWORD: s3kr1t
-      POSTGRES_DB: tcf_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
