Stop ignoring migrations/__init__.py

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ __pycache__/*
 !db/*.sql
 # Migration files
 tcf_website/migrations/*
+!tcf_website/migrations/__init__.py
 # Environment variables
 .env*
 !.config/.env.example
