--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -7,7 +7,7 @@ on:
       - '*'
   # The following is needed to run tests upon direct push to dev or master
   push:
-    branches: [dev, master]
+    branches: [dev, master, dev-wiki]
 env:
   PYTHON_TARGET: 3.8
   # Django
