Revert "Trigger GitHub Actions"
This reverts commit 05a7ef6217c207f5dfb7fa5b8b6c00ffac1a4184.

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -7,7 +7,7 @@ on:
       - '*'
   # The following is needed to run tests upon direct push to dev or master
   push:
-    branches: [dev, master, dev-wiki]
+    branches: [dev, master]
 env:
   PYTHON_TARGET: 3.8
   # Django
