Fix deployment condition

--- a/.github/workflows/master-to-app-engine.yml
+++ b/.github/workflows/master-to-app-engine.yml
@@ -36,7 +36,7 @@ env:
 
 jobs:
   deploy:
-    if: ${{ contains( ['success', 'skipped'], github.event.workflow_run.conclusion ) }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
