--- a/.github/workflows/master-to-app-engine.yml
+++ b/.github/workflows/master-to-app-engine.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install Python packages, excluding the unnecessary ones
         run: |
           python -m pip install --upgrade pip
-          sed -i '/\(gunicorn\|django\-heroku\)/d' requirements.txt
+          sed -i '/\(coverage\|gunicorn\|django\-heroku\)/d' requirements.txt
           pip install -r requirements.txt
 
       - name: Migrations
