Take out --parallel from manage.py test
because it interferes with calculating code coverage

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -87,7 +87,7 @@ jobs:
           envsubst < .config/.env.example > .env
           python manage.py makemigrations
           python manage.py migrate
-          coverage run manage.py test --keepdb --parallel
+          coverage run manage.py test --keepdb
         continue-on-error: true
 
       - name: Get code coverage
