--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -47,11 +47,11 @@ jobs:
       - name: Install Python packages, excluding the unnecessary ones
         run: |
           python -m pip install --upgrade pip
-          sed -i '/\(tqdm\|coverage|gunicorn\|django\-heroku\|uwsgi\)/d' requirements.txt
+          sed -i '/\(tqdm\|coverage\|gunicorn\|django\-heroku\|uwsgi\)/d' requirements.txt
           pip install -r requirements.txt
 
       - name: Run pylint
-        run: pylint --django-settings-module=${{ env.DJANGO_SETTINGS_MODULE }} --load-plugins pylint_django tcf_website tcf_core
+        run: pylint --django-settings-module=${{ env.DJANGO_SETTINGS_MODULE }} --jobs=0 --load-plugins pylint_django tcf_website tcf_core
 
   django:
     runs-on: ubuntu-latest
