--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -110,7 +110,7 @@ jobs:
         run: npm ci
 
       - name: Run ESLint
-        run: node_modules/.bin/eslint -c .config/.eslintrc.yml 'tcf_website/static/'
+        run: node_modules/.bin/eslint -c .config/.eslintrc.yml tcf_website/static/
 
   discord:
     if: ${{ always() }}
