Add discord notification for deployment (#407)
* Fix #387 Add discord notification for deployment

* Separate `uses` and `run` in a workflow file

--- a/.github/workflows/master-to-app-engine.yml
+++ b/.github/workflows/master-to-app-engine.yml
@@ -74,3 +74,18 @@ jobs:
         uses: google-github-actions/deploy-appengine@main
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+  discord:
+    if: ${{ always() }}
+    needs: [deploy]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Send a message to tCF Discord Server when deployment is finished
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_URL_CI }}
+          DEPLOY_RESULT: ${{ needs.deploy.result }}
+        run: |
+          bash ./scripts/notify-deployment-result.sh
+        shell: bash
