--- a/.github/workflows/master-to-app-engine.yml
+++ b/.github/workflows/master-to-app-engine.yml
@@ -40,7 +40,13 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      # A workaround because this workflow runs on the default branch (`dev`)
+      # because that's how `workflow_run` works at the moment
+      # https://github.community/t/workflow-run-not-working-as-expected/139342
+      - name: Checkout `master`
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.workflow_run.head_sha }}
 
       - name: Set up Python ${{ env.PYTHON_TARGET }}
         uses: actions/setup-python@v2
