--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -125,7 +125,7 @@ jobs:
           PR_NUMBER: ${{ github.event.number}}
           PR_TITLE: ${{ github.event.pull_request.title }}
           DJANGO_COVERAGE: ${{ needs.django.outputs.code-coverage }}
-          LAST_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+          LAST_COMMIT_SHA: ${{ github.event.sha }}
         run: |
           bash ./scripts/notify-checks-result.sh
         shell: bash
