--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -117,7 +117,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.after }}
+          fetch-depth: 0
           
       - name: Send a message to tCF Discord Server when all jobs are finished
         env:
