Improve discord notification (#450)
* Rename notify-discord.sh to notify-checks-result.sh

* Change the formatting of PR head/base branches

* Fix #447 Include the last commit message in discord notifications

* Fix escape characters

* Check the result after calling Discord endpoints

* Fix commit message

* Fix typo: msg -> commit_message

* Fix typo: github.event.sha -> github.sha

* Fix escape characters

* Try python3 instead of python

* Replace python3 with jq

* Add echo statements for debugging

* this 'contains "quotes

* Use -j option in jq

* Use the branch name

* Detect branch before fetching commit message

* Hope this works

https://github.community/t/accessing-commit-message-in-pull-request-event/17158

* Add more debugging statement

* Finally

* More debugging statements

* Check out a different branch

* Use fetch-depth: 0

* single ' double " backslash \ single ' double " backslash \

* Use jq -R and remove outermost double quotes

* ok ' " \ | ` ~ ! @ # $ %   ^ & * ( ) { } [ ] <> , . ? / \n

* ' " \ | ` ~ ! @ # $ %   ^ & * ' " \ | ` ~ ! @ # $ %   ^ & *

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -116,6 +116,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # needed for PRs
+
       - name: Send a message to tCF Discord Server when all jobs are finished
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_URL_CI }}
@@ -125,6 +128,7 @@ jobs:
           PR_NUMBER: ${{ github.event.number}}
           PR_TITLE: ${{ github.event.pull_request.title }}
           DJANGO_COVERAGE: ${{ needs.django.outputs.code-coverage }}
+          LATEST_PR_COMMIT: ${{ github.event.after }}
         run: |
-          bash ./scripts/notify-discord.sh
+          bash ./scripts/notify-checks-result.sh
         shell: bash
