--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "markdownlint": "^0.23.1",
+    "markdownlint-cli": "^0.27.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
