--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ django-filter
 coverage
 
 # Linting
-pylint>=2.4.4
+pylint>=2.4.4,<2.8.0
 pylint-django>=2.0.14
 autopep8>=1.5.1
 html-linter>=0.4.0
