--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - ./db:/app
     image: postgres:12.2
     restart: always
-    container_name: ${DB_HOST}
+    container_name: ${DB_NAME}
     env_file:
       - ./.env
     command: -p ${DB_PORT}
