Update files to use new .env variable

--- a/.config/.env.example
+++ b/.config/.env.example
@@ -16,10 +16,7 @@ DB_PORT=$DB_PORT
 
 # elasticsearch
 ES_PUBLIC_API_KEY=$ES_PUBLIC_API_KEY
-ES_COURSE_SEARCH_ENDPOINT=$ES_COURSE_SEARCH_ENDPOINT
-ES_INSTRUCTOR_SEARCH_ENDPOINT=$ES_INSTRUCTOR_SEARCH_ENDPOINT
-ES_COURSE_DOCUMENTS_ENDPOINT=$ES_COURSE_DOCUMENTS_ENDPOINT
-ES_INSTRUCTOR_DOCUMENTS_ENDPOINT=$ES_INSTRUCTOR_DOCUMENTS_ENDPOINT
+ELASTICSEARCH_ENDPOINT=$ELASTICSEARCH_ENDPOINT
 ES_PRIVATE_API_KEY=$ES_PRIVATE_API_KEY
 
 # discord
