--- a/.github/workflows/master-to-app-engine.yml
+++ b/.github/workflows/master-to-app-engine.yml
@@ -26,10 +26,7 @@ env:
   SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: ${{ secrets.SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET }}
   # elasticsearch
   ES_PUBLIC_API_KEY: ${{ secrets.ES_PUBLIC_API_KEY }}
-  ES_COURSE_SEARCH_ENDPOINT: ${{ secrets.ES_COURSE_SEARCH_ENDPOINT }}
-  ES_INSTRUCTOR_SEARCH_ENDPOINT: ${{ secrets.ES_INSTRUCTOR_SEARCH_ENDPOINT }}
-  ES_COURSE_DOCUMENTS_ENDPOINT: ${{ secrets.ES_COURSE_DOCUMENTS_ENDPOINT }}
-  ES_INSTRUCTOR_DOCUMENTS_ENDPOINT: ${{ secrets.ES_INSTRUCTOR_DOCUMENTS_ENDPOINT }}
+  ELASTICSEARCH_ENDPOINT: ${{ secrets.ELASTICSEARCH_ENDPOINT }}
   ES_PRIVATE_API_KEY: ${{ secrets.ES_PRIVATE_API_KEY }}
   # discord
   DISCORD_URL_BUG: ${{ secrets.DISCORD_URL_BUG }}
