--- a/.github/workflows/master-to-app-engine.yml
+++ b/.github/workflows/master-to-app-engine.yml
@@ -10,6 +10,8 @@ on:
       - completed
 
 env:
+  # Make requests work on GAE
+  GAE_USE_SOCKETS_HTTPLIB : ''
   PYTHON_TARGET: 3.9
   # Django
   DJANGO_SETTINGS_MODULE: tcf_core.settings.prod
