--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,3 @@
 [MAIN]
 
-ignore=migrations
+ignore=migrations,load_grades.py,fix_multiple_objects_returned.py,fetch_grades.py,fetch_data.py,load_semester_old.py,other_schools_department_fix.py
