--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,14 @@ Django>=3.2
 psycopg2>=2.8.4
 social-auth-app-django>=3.1.0
 pandas>=1.0.3
+numpy~=1.21.2
 tqdm>=4.45.0
 django-cachalot
-requests
+requests~=2.26.0
 django-environ
 django-silk
-djangorestframework
-django-filter
+djangorestframework~=3.12.4
+django-filter~=21.1
 coverage
 
 # Linting
