--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django>=3.2
 psycopg2>=2.8.4
 social-auth-app-django>=3.1.0
 pandas>=1.0.3
-numpy~=1.21.2
+numpy>=1.21.2
 tqdm>=4.45.0
 django-cachalot
 requests~=2.26.0
@@ -18,10 +18,3 @@ pylint>=2.4.4
 pylint-django>=2.0.14
 autopep8>=1.5.1
 html-linter>=0.4.0
-
-# Heroku setup
-gunicorn
-django-heroku
-
-# GAE Prod
-uwsgi
