--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ pylint>=2.4.4
 pylint-django>=2.0.14
 autopep8>=1.5.1
 html-linter>=0.4.0
+
+# Heroku setup
+gunicorn
+django-heroku
+
+# GAE Prod
+uwsgi
