--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ django-cachalot
 requests~=2.26.0
 django-environ
 django-silk
-djangorestframework~=3.12.4
+djangorestframework
 django-filter~=21.1
 coverage
 
