--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,7 +1,8 @@
 # Based on https://github.com/actions/starter-workflows/blob/main/ci/django.yml
 name: Continuous Integration
 
-on:
+on: 
+  workflow_dispatch:
   pull_request:
     branches:
       - '*'
